--- a/style.css
+++ b/style.css
@@ -14,13 +14,32 @@
     font-size: 31px;
 }
 
+.card{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
+    width: 500px;
+    height: 256px;
+}
+
+.card-p3:hover{
+  padding: 10px;
+  filter: drop-shadow(0px 24px 64px rgba(22, 27, 45, 0.05));
+}
+
 .card-text{
+    padding-bottom: 48px;
     font-family: HK Grotesk;
     font-size: 15px;
     text-align: center;
     color: #869AB8;
 }
 .card-img-top{
+    align-items: center;
+    margin: auto;
+}
+img{
     align-items: center;
     margin: auto;
 }
