--- a/style.css
+++ b/style.css
@@ -15,17 +15,14 @@
 }
 
 .card{
+    align-items: center;
     margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    margin-left: 20px;
-    width: 500px;
     height: 256px;
 }
 
 .card-p3:hover{
   padding: 10px;
-  filter: drop-shadow(0px 24px 64px rgba(22, 27, 45, 0.05));
+  filter: drop-shadow(0px 0px 32px rgba(22, 27, 45, 0.05));
 }
 
 .card-text{
