--- a/style.css
+++ b/style.css
@@ -1,65 +1,3 @@
-.mx-auto {
-    margin-top: 64px !important;
-  }
-  .h4{
-      color: #506690;
-      text-align: center;
-      margin-top: 24px;
-  }
-.display-4{
-    margin-top: 0;
-    font-family: HK Grotesk;
-    font-weight: 600;
-    text-align: center;
-    font-size: 31px;
-}
-
-.card{
-    align-items: center;
-    margin-top: 20px;
-    height: 256px;
-}
-
-.card-p3:hover{
-  padding: 10px;
-  filter: drop-shadow(0px 0px 32px rgba(22, 27, 45, 0.05));
-}
-
-.card-text{
-    padding-bottom: 48px;
-    font-family: HK Grotesk;
-    font-size: 15px;
-    text-align: center;
-    color: #869AB8;
-}
-.card-img-top{
-    align-items: center;
-    margin: auto;
-}
-img{
-    align-items: center;
-    margin: auto;
-}
-h5{
-    font-family: HK Grotesk;
-    font-size: 15px;
-    font-weight: 600;
-}
-.navbar-footer-sub{
-    font-family: HK Grotesk;
-    font-size: 14px;
-    font-weight: 400;
-    color: #869AB8;
-}
-a{
-    color: black;
-}
-.nav-item{
-    font-family: HK Grotesk;
-    font-size: 15px;
-    font-weight: 600;
-}
-footer{
-    margin-top: 60px;
-    background-color: #F1F4F8;
+.text-python{
+    color: #3FB422;
 }
