--- a/style.css
+++ b/style.css
@@ -11,15 +11,15 @@
     color: #869ab8!important;
     font-size: 12px;
 }
-.highlight{
+.highlight-block{
     background: #1e1e1e;
     padding: 20px;
     border-radius: 4px;
     box-shadow: 0 2px 6px 1px rgba(0,0,0,.25);
 }
 
-.highlight pre,
-.highlight table {
+.highlight-block pre,
+.highlight-block table {
     background: #1e1e1e;
     color: white;
 }
@@ -29,16 +29,16 @@ pre {
     word-wrap: normal;
     overflow-wrap: normal;
     white-space: pre;
-    max-height: 760px;
 }
 
 ::-webkit-scrollbar {
-    width: 16px;
+    width: 8px;
+    height: 8px;
   }
   
   /* Track */
   ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
+    background: transparent; 
   }
    
   /* Handle */
