--- a/style.css
+++ b/style.css
@@ -2,27 +2,39 @@
 table {
     border-collapse: separate !important;
     border-spacing: 0 !important;
-  }
+}
+
+.blur{
+  -webkit-filter: blur(3px);
+  filter: blur(3px);
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
   
-  /* top-left border-radius */
-  table tr:first-child th:first-child {
-    border-top-left-radius: 0.5rem !important;
-  }
+/* top-left border-radius */
+table tr:first-child th:first-child {
+  border-top-left-radius: 0.5rem !important;
+}
   
-  /* top-right border-radius */
-  table tr:first-child th:last-child {
-    border-top-right-radius: 0.5rem !important;
-  }
+/* top-right border-radius */
+table tr:first-child th:last-child {
+  border-top-right-radius: 0.5rem !important;
+}
   
-  /* bottom-left border-radius */
-  table tr:last-child td:first-child {
-    border-bottom-left-radius: 0.5rem !important;
-  }
+/* bottom-left border-radius */
+table tr:last-child td:first-child {
+  border-bottom-left-radius: 0.5rem !important;
+}
   
-  /* bottom-right border-radius */
-  table tr:last-child td:last-child {
-    border-bottom-right-radius: 0.5rem !important;
-  }
+/* bottom-right border-radius */
+table tr:last-child td:last-child {
+  border-bottom-right-radius: 0.5rem !important;
+}
 
 .text-python{
     color: #3FB422;
@@ -58,21 +70,21 @@ pre {
 }
 
 ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
+  width: 8px;
+  height: 8px;
+}
   
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: transparent; 
-  }
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent; 
+}
    
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #888; 
-  }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
   
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  }
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
