--- a/style.css
+++ b/style.css
@@ -2,6 +2,43 @@ html {
   scroll-behavior: smooth;
 }
 
+.rating {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: start;
+}
+
+.rating>input {
+  display: none
+}
+
+.rating>label {
+  position: relative;
+  font-size: 48px;
+  font-weight: 300;
+  color: #42BA96;
+  cursor: pointer
+}
+
+.rating>label::before {
+  content: "\2605";
+  position: absolute;
+  opacity: 0
+}
+
+.rating>label:hover:before,
+.rating>label:hover~label:before {
+  opacity: 1 !important
+}
+
+.rating>input:checked~label:before {
+  opacity: 1
+}
+
+.rating:hover>input:checked~label:before {
+  opacity: 0.4
+}
+
 .hover{
   opacity: 0.5;
 }
