--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ html {
   scroll-behavior: smooth;
 }
 
+.boder-dotted {
+  border-style: dotted !important;
+}
+
 .rating {
   display: flex;
   flex-direction: row-reverse;
