--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 768px) {
+  .mobile-block {
+      display: block !important;
+      margin-bottom: 10px; /* Add some spacing between blocks */
+  }
+}
 .rounded-16 {
   border-radius: 16px !important;  
 }
